imp: avoid showing invisible text
Tell the browser that text using the font should be displayed immediatelyusing a
system font. Once the custom font is ready, replace the system font.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,6 +6,7 @@
     src: local(''),
          url('/fonts/bitter-v16-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('/fonts/bitter-v16-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-display: swap;
 }
 
 /* open-sans-regular - latin */
@@ -16,6 +17,7 @@
     src: local(''),
          url('/fonts/open-sans-v18-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('/fonts/open-sans-v18-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-display: swap;
 }
 
 /* open-sans-700 - latin */
@@ -26,6 +28,7 @@
     src: local(''),
          url('/fonts/open-sans-v18-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('/fonts/open-sans-v18-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-display: swap;
 }
 
 * {
